--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
     <header>
         <img src="logo.png" alt="Ashish's signature" class="logo">
-        <nav>
+        <!-- <nav>
             <a href="mailto:alexmaxx8055@gmail.com">Mail</a>
             <a href="https://github.com/maxx4688">GitHub</a>
             <a href="https://x.com/maxx4688">Twitter</a>
-        </nav>
+        </nav> -->
     </header>
 
     <main>
         <section class="hero">
             <h1>Hello, I'm Ashish</h1>
             <p class="subtitle">Creative Developer & Designer</p>
-            <a href="#contact" class="cta-button">Get in Touch</a>
+            <a href="mailto:alexmaxx8055@gmail.com" class="cta-button">Get in Touch</a>
         </section>
         
         <div class="sections">
             <a href="about.html">
             <section class="section" id="about">
-                <h2>About Me</h2>
-                <p>I'm a passionate creator who combines technical expertise with creative vision to build exceptional digital experiences.</p>
+                <h2>About Ashish</h2>
+                <p>Visit to the special section that describes about me more than i can.</p>
             </section>
         </a>
-<a href="projects.html">
+            <a href="projects.html">
             <section class="section" id="projects">
                 <h2>My projects</h2>
                 <p>Explore my portfolio of projects that showcase my skills in development and design.</p>
