--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <img src="logo.png" alt="Ashish's signature" class="logo">
-        <nav>
+        <!-- <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="mailto:alexmaxx4688@gmail.com">Contact</a>
-        </nav>
+        </nav> -->
     </header>
 
     <main>
