--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <img src="logo.png" alt="Ashish's signature" class="logo">
-        <nav>
+        <!-- <nav>
             <a href="mailto:alexmaxx4688@gmail.com">Mail</a>
             <a href="https://github.com/maxx4688">GitHub</a>
             <a href="https://x.com/maxx4688">Twitter</a>
-        </nav>
+        </nav> -->
     </header>
 
     <main>
@@ -25,23 +25,33 @@
 
         <div class="sections">
             <section class="section" id="journey">
-                <h2>My Journey</h2>
+                <h2>My Tech path</h2>
                 <div class="timeline">
                     <div class="timeline-item">
-                        <h3>2018</h3>
-                        <p>Started learning web development</p>
-                    </div>
-                    <div class="timeline-item">
-                        <h3>2020</h3>
-                        <p>Landed my first developer job</p>
-                    </div>
-                    <div class="timeline-item">
                         <h3>2022</h3>
-                        <p>Launched my first major project</p>
+                        <p>Got admission as HR specilization student.</p>
+                        <p class="timeline-sub">#October</p>
+                        <p>Started exploring Flutter and Dart.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>2023</h3>
+                        <p>Built my first working android app with Database and APIs.</p>
+                        <p class="timeline-sub">#March</p>
+                        <p>Started learning HTML and CSS.</p>
                     </div>
                     <div class="timeline-item">
                         <h3>2024</h3>
-                        <p>Continuing to grow and innovate</p>
+                        <p>Started working on major projects to learn and explore something new.</p>
+                        <p>Participated in many on-campus HR activities to build decision making and<br>conflict management in the working environment.</p>
+                        <p class="timeline-sub">#August</p>
+                        <p>Landed my first developer job as front-end app developer.</p>
+                        <p class="timeline-sub">#October</p>
+                        <p>Published my first app on GitHub and made publically accessible.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>2025</h3>
+                        <p>Started boosting the app reliability with neat and perfect user interface.</p>
+                        <p class="timeline-sub">#And continue...</p>
                     </div>
                 </div>
             </section>
@@ -50,23 +60,31 @@
                 <h2>Skills & Expertise</h2>
                 <div class="skill-bars">
                     <div class="skill-bar">
-                        <p>Front-end Development</p>
-                        <div class="skill-bar-fill" style="width: 0%;" data-width="90%"></div>
+                        <p>Front-end App Development</p>
+                        <div class="skill-bar-fill" style="width: 0%;" data-width="70%"></div>
                     </div>
                     <div class="skill-bar">
-                        <p>Back-end Development</p>
+                        <p>Front-end Web Development</p>
+                        <div class="skill-bar-fill" style="width: 0%;" data-width="50%"></div>
+                    </div>
+                    <div class="skill-bar">
+                        <p>HR activities</p>
                         <div class="skill-bar-fill" style="width: 0%;" data-width="80%"></div>
+                    </div>
+                    <div class="skill-bar">
+                        <p>Graphic Designer</p>
+                        <div class="skill-bar-fill" style="width: 0%;" data-width="85%"></div>
                     </div>
                     <div class="skill-bar">
                         <p>UI/UX Design</p>
                         <div class="skill-bar-fill" style="width: 0%;" data-width="75%"></div>
                     </div>
                     <div class="skill-bar">
-                        <p>Database Management</p>
+                        <p>Motion Designer</p>
                         <div class="skill-bar-fill" style="width: 0%;" data-width="85%"></div>
                     </div>
                     <div class="skill-bar">
-                        <p>Cloud Services</p>
+                        <p>Logo Designer</p>
                         <div class="skill-bar-fill" style="width: 0%;" data-width="70%"></div>
                     </div>
                 </div>
@@ -74,29 +92,33 @@
 
             <section class="section" id="philosophy">
                 <h2>My Philosophy</h2>
-                <p>I believe in creating technology that enhances human experiences. Every project is an opportunity to learn, innovate, and make a positive impact. I'm passionate about clean code, intuitive design, and building solutions that stand the test of time.</p>
-                <p>My approach combines technical expertise with creative problem-solving, always keeping the end-user in mind. I strive to stay current with the latest technologies while maintaining a strong foundation in core principles.</p>
+                <p>I believe in creating environment that improves working efficiency and the final output.<br>Every project is an opportunity to learn, innovate, and make a positive impact, whether it is Tech, Programming or Human Resource management.<br>I'm passionate about building perfect environment for continuous work progress and more refined output quality.</p>
+                <p>My approach combines formal group building with creative problem-solving to serve something by always keeping the end-user in mind. I strive to stay current with the latest technologies and approaches while maintaining a strong foundation in core principles.</p>
+                <br><p>I bealive in formal working environment to extract high quality output from it.</p>
             </section>
 
             <section class="section" id="beyond-coding">
                 <h2>Beyond Coding</h2>
-                <p>When I'm not immersed in lines of code, you can find me:</p>
+                <p class="timeline-sub">When I'm not immersed in lines of code and figuring out solution, you can find me:</p>
                 <ul>
-                    <li>Exploring nature trails and capturing landscape photography</li>
-                    <li>Experimenting with new recipes in the kitchen</li>
-                    <li>Diving into sci-fi and technology books</li>
-                    <li>Practicing mindfulness and meditation</li>
+                    <li>Exploring nature trails and Capturing landscape beauties and freezing the moments.</li>
+                    <li>Filling out a White canvas to give my imagination a visual look to express others.</li>
+                    <li>Smashing heads of other players in FPS games</li>
+                    <li>Building a good Physical health for good mental health.</li>
                 </ul>
-                <p>I believe in maintaining a healthy work-life balance and drawing inspiration from diverse experiences to fuel my creativity and problem-solving skills.</p>
             </section>
 
             <section class="section" id="contact">
                 <h2>Let's Connect</h2>
-                <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of your visions. Feel free to reach out to me through any of the following channels:</p>
+                <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of.</p>
                 <ul>
-                    <li>Email: <a href="mailto:alexmaxx8055@gmail.com">alexmaxx8055@gmail.com</a></li>
-                    <li>GitHub: <a href="https://github.com/maxx4688">maxx4688</a></li>
-                    <li>Twitter: <a href="https://x.com/maxx4688">maxx4688</a></li>
+                    <div class="webs">
+                        <div class="socials">Mail</div>
+                        <div class="socials">GitHub</div>
+                        <div class="socials">Twitter</div>
+                        <div class="socials">Reddit</div>
+                        <div class="socials">Instagram</div>
+                    </div>
                 </ul>
             </section>
         </div>
